subiendo la api a server

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js"
+    "dev": "nodemon app.js",
+    "start": "node app"
   },
   "author": "",
   "license": "ISC",
@@ -23,6 +24,7 @@
     "passport-local": "^1.0.0"
   },
   "devDependencies": {
-    "handlebars": "^4.5.0"
+    "handlebars": "^4.5.0",
+    "nodemon": "^2.0.15"
   }
 }
